change quantity from int to string, update tests (wip)